--- a/.github/workflows/buildKanikoAndChangeImage.yml
+++ b/.github/workflows/buildKanikoAndChangeImage.yml
@@ -71,7 +71,7 @@ jobs:
           --destination=${{secrets.aws_account_id}}.dkr.ecr.us-east-1.amazonaws.com/${{inputs.image_repository_name}}:${TAG}-${{inputs.prefix}}-${SHORT_SHA} \
           --destination=${{secrets.aws_account_id}}.dkr.ecr.us-east-1.amazonaws.com/${{inputs.image_repository_name}}:latest-${{inputs.prefix}} --git=branch=${GITHUB_BRANCH} \
           --context-sub-path=${{inputs.working-directory}} \
-          --platform=linux/arm64 \
+          --custom-platform=linux/arm \
           --dockerfile=${{inputs.dockerfile}}
           
       - name: kubernetes deploy
